Fix of the legend display in sgts page, spacing between listing in mobile view

--- a/apps/src/sass/pages/sg-tech-stack/_sg-tech-stack.scss
+++ b/apps/src/sass/pages/sg-tech-stack/_sg-tech-stack.scss
@@ -46,23 +46,41 @@ $section-highlights-space: 10%;
 .legend {
   align-items: center;
 
+  @media screen and (min-width: 769px){
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  @media screen and (min-width: 551px) and (max-width: 768px) {
+    justify-content: flex-start;
+  }
+
   .live {
     margin-left: 7px;
   }
-
-  .planned,
-  .work_in_progress {
-    @media screen and (max-width: 915px) {
-      margin-left: 12px;
+  .planned {
+    @media screen and (max-width: 319px) {
+      margin-left: 70px !important;
     }
-
-    margin-left: 24px;
+    @media screen and (min-width: 320px) and (max-width: 360px) {
+      margin-left: 4px;
+    }
+    // For Desktop View
+      margin-left: 24px;
   }
 
-  @include until($tablet) {
-    .work_in_progress {
+  .work_in_progress {
+    @media screen and (min-width: 280px) and (max-width: 550px) {
       margin-left: 70px;
     }
+    @media screen and (min-width: 551px) and (max-width: 768px) {
+      margin-left: 24px;
+    }
+    @media screen and (min-width: 768px) and (max-width: 1215px) {
+      margin-left: 70px;
+    }
+    // For Desktop View
+      margin-left: 24px;
   }
 }
 
@@ -84,15 +102,8 @@ $section-highlights-space: 10%;
     justify-content: space-between;
   }
 
-  @media screen and (min-width: 769px),
-  print {
-    .row:not(.is-desktop) {
-      column-gap: 10px !important;
-    }
-  }
-
   .host-rows {
-    @include until($tablet) {
+    @include until($desktop) {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
@@ -100,18 +111,20 @@ $section-highlights-space: 10%;
     }
 
     .sub-host-rows {
-      @include until($tablet) {
+      @include until($desktop) {
         display: flex;
         flex-direction: column;
-        width: 226px;
+        width: calc(100% - (#{$section-highlights-space} / 2));
+
       }
     }
   }
 
   .title-col {
-    padding-left: 7px !important;
+    padding-left: 24px !important;
 
-    @include until($tablet) {
+    @include until($desktop) {
+      padding-left: 0px !important;
       margin-bottom: -35px !important;
     }
 
@@ -163,6 +176,9 @@ $section-highlights-space: 10%;
         justify-content: left !important;
         padding-left: 24px;
       }
+      @media screen and (min-width: 280px) and (max-width: 319px) {
+        padding-left: 5px;
+        }
     }
 
     .sgds-card-content {
@@ -184,7 +200,11 @@ $section-highlights-space: 10%;
         font-weight: bold !important;
         list-style-type: none;
         position: relative;
-        margin-bottom: 24px !important
+        margin-bottom: 24px !important;
+        //Mobile Size below iphone SE (226px)
+        @media screen and (max-width: 330px) {
+          margin-bottom: 30px !important;
+        }
       }
     }
 
